# spotify_analytics_dashboard_2

./: Cargo.toml  index.html
src/: lib.rs  main.rs
src/components/: app.rs  authentication.rs  dashboard.rs  mod.rs  typewriter_text.rs
src/style/: app_style.rs  authentication_style.rs  dashboard_style.rs  mod.rs
