[package]
name = "spotify_analytics_dashboard_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csscolorparser = "0.6.2"
leptos = { version = "0.2.5" }
leptos_router = {version = "0.2.5", features = ["csr"] }
stylers = "0.3.1"
# styled = { git = "https://github.com/TheSharkhead2/styled.git" }
# stylist = "0.12.0"
